[package]
name = "redline-core"
version = "0.1.1"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Core encoding, filtering, and record capture for redline"
readme = "README.md"

[features]
default = []

[dependencies]
itoa = "1.0"
ryu = "1.0"
smallvec = { version = "1.13", default-features = false }
tracing-core = { version = "0.1", default-features = false }
