[package]
name = "redline-log"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Fast structured logging for tracing"

[lib]
name = "redline"

[dependencies]
crossbeam-queue = "0.3"
parking_lot = "0.12"
redline-core = { version = "0.1.0", path = "../redline-core" }
rustc-hash = "2.1"
smallvec = "1.13"
tracing = { version = "0.1", default-features = false, features = ["std"] }
tracing-core = "0.1"
